<resources>
    <string name="app_name">CeylonTraveler</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="todo">TODO</string>
    <string name="logo_content_description">Logo for MyApp</string>
    <string name="image">image</string>
    <string name="jaffna">Jaffna</string>
    <string name="jaffna_is_a_city_located_in_the_northern_province_of_sri_lanka_known_for_its_rich_cultural_heritage_and_stunning_natural_beauty">Jaffna is a city located in the northern province of Sri Lanka, known for its rich cultural heritage and stunning natural beauty</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="google_maps_key">key</string>
    <string name="kandyDiscription">Kandy is a beautiful city located in the central province of Sri Lanka, known for its rich history, vibrant culture, and scenic beauty. The city is home to many travel places that attract visitors from all over the world. Some of the most popular places to visit in Kandy include the Temple of the Tooth Relic, the Royal Botanical Gardens, the Kandy Lake, the Bahirawakanda Vihara Buddha Statue, and the Udawattekele Sanctuary. These travel places offer stunning views, unique cultural experiences, and a chance to immerse oneself in the natural beauty of Sri Lanka. Additionally, Kandy is surrounded by lush green hills, tea plantations, and waterfalls, making it a perfect destination for nature lovers and adventure seekers.</string>
    <string name="disccriptionJaffna">Jaffna is a city located in the northern province of Sri Lanka, known for its rich cultural heritage and vibrant Tamil traditions. The city has many famous places that attract visitors from all over the world. Some of the most popular places to visit in Jaffna include the Jaffna Fort, the Nallur Kandaswamy Temple, the Keerimalai Naguleswaram Temple, the Jaffna Public Library, and the Point Pedro Lighthouse. These places offer unique cultural experiences, historical significance, and stunning views of the city and its surroundings. Additionally, Jaffna is surrounded by pristine beaches, scenic islands, and wildlife reserves, making it a perfect destination for nature lovers and adventure seekers.</string>
    <string name="discriptionAnuradapuraya">Anuradhapura is an ancient city located in the North Central Province of Sri Lanka, and it was the first capital of Sri Lanka. It is a UNESCO World Heritage site and a popular tourist destination. Anuradhapura is known for its well-preserved ruins of ancient Sri Lankan civilization, including monasteries, temples, stupas, and statues of the Buddha. Some of the most famous places to visit in Anuradhapura include the Sri Maha Bodhi, Ruwanwelisaya Stupa, Abhayagiri Vihara, Jetavanaramaya, Isurumuniya Temple, and the Samadhi Buddha Statue.</string>
    <string name="polonnaruwaDiscrption">Polonnaruwa was the second capital of Sri Lanka after Anuradhapura and is home to many ancient ruins and landmarks. The city is divided into two main areas, the Royal Palace complex and the Quadrangle. The Royal Palace complex features several impressive structures such as the Audience Hall, the Royal Bathing Pool, and the Lotus Bathing Pool. The Quadrangle is a collection of ruins that include the Vatadage, the Thuparama, and the Gal Vihara, which is famous for its four Buddha statues carved out of a single rock. Other notable landmarks in Polonnaruwa include the Lankatilaka temple, the Pabalu Vehera stupa, and the Rankot Vihara, the largest stupa in Polonnaruwa. The ancient city of Polonnaruwa is a UNESCO World Heritage Site and is a must-visit destination for anyone interested in Sri Lanka\'s rich history and culture.</string>
    <string name="discriptionHambantota">Hambantota is a district located in the Southern Province of Sri Lanka, and it offers many popular sights to explore. Some of the notable attractions in Hambantota include Yala National Park, which is home to a variety of wildlife, Bundala National Park, famous for its migratory bird population, and the Kataragama Temple, an ancient Hindu temple dedicated to Lord Skanda. Other must-visit places include the Tissamaharama Stupa, Kirinda Beach, and the unique Ussangoda National Park known for its red soil and unusual rock formations. Overall, Hambantota is a great destination for nature lovers, history enthusiasts, and anyone looking to experience the beauty of Sri Lanka\'s southern region.</string>
    <string name="logout">Logout</string>
    <string name="discriptionNagadeepaya">Nagadeepa Purana Viharaya is an important Buddhist temple located on the island of Nainathivu in the northern province of Sri Lanka. It is considered to be the place where the Buddha visited during his second journey to Sri Lanka and is a special place of pilgrimage for Sri Lankan Buddhists. The temple has several religious structures including a sacred stupa, a Bodhi tree, and small shrines and statues. In addition, the temple houses a museum that displays artifacts and exhibits related to the history and culture of the region. Visitors can reach the temple by ferry from Jaffna and are expected to dress modestly and remove their shoes before entering the temple grounds.</string>
    <string name="disctiptionNallur">Nallur Kovil is a popular Hindu temple located in Jaffna, Sri Lanka. It is dedicated to the god Murugan and is considered one of the most important Hindu temples in Sri Lanka. The temple is known for its impressive architecture and intricate carvings, as well as its vibrant festivals and processions. Every year, the temple hosts a 25-day festival known as the Nallur Festival, which draws thousands of visitors from around the world.</string>
    <string name="discriptionJaffnaFort">The Jaffna Fort is a well-preserved historical fort located in Jaffna, Sri Lanka. Originally built by the Portuguese in the 16th century and later fortified by the Dutch in the 17th century, it showcases a blend of European and South Indian architectural styles. The fort features thick granite walls, bastions, gateways, barracks, a Dutch church, and a governor\'s residence. Despite the impacts of time and the Sri Lankan civil war, the fort has been restored and serves as a popular tourist attraction. It offers panoramic views of Jaffna town and the Jaffna Lagoon, providing visitors with a glimpse into the region\'s colonial past and architectural heritage.</string>
    <string name="discriptionRuwanwali">The Ruwanwelisaya is a revered Buddhist stupa located in Anuradhapura, Sri Lanka. Built in the 2nd century BCE, it stands at a height of 338 feet (103 meters) and has a circumference of 950 feet (290 meters). The stupa is believed to house relics of Lord Buddha and is adorned with intricate carvings and sculptures. It serves as a place of worship, meditation, and reflection, attracting pilgrims and tourists alike. The Ruwanwelisaya holds significant cultural and historical value, symbolizing Buddhism in Sri Lanka and offering a serene and spiritual atmosphere.</string>
    <string name="discriptionIsurumuniya">Isurumuniya is an ancient Buddhist temple located in Anuradhapura, Sri Lanka. It dates back to the 3rd century BC and is known for its rock-cut image house and exquisite stone carvings. The most famous sculpture found at Isurumuniya is the \'Isurumuniya Lovers,\' depicting a loving couple. The temple complex also includes a stupa, shrines, and a peaceful pond called Tissa Wewa.Isurumuniya is a place of historical and religious significance, providing visitors with an opportunity to explore Sri Lanka\'s cultural heritage and experience a serene atmosphere.</string>
    <string name="discriptionSrimahabodiya">Sri Maha Bodhiya, also known as the Sacred Bodhi Tree, is a revered Buddhist site in Anuradhapura, Sri Lanka. It is believed to be the oldest living human-planted tree in the world, dating back over 2,000 years. The tree is a descendant of the original Bodhi Tree in Bodh Gaya, India, under which Lord Buddha attained enlightenment. Sri Maha Bodhiya is surrounded by a beautifully landscaped complex with ancient stupas, shrines, and monastic buildings. It is a place of pilgrimage and meditation for Buddhists, who visit to pay homage to the sacred tree and seek spiritual blessings. The tranquil ambiance and historical significance make Sri Maha Bodhiya an important cultural and religious landmark in Sri Lanka.</string>
    <string name="discriptionGalviharaya">Galviharaya, also known as Gal Viharaya or Gal Vihara, is a Buddhist temple located in Anuradhapura, Sri Lanka. It is a significant site within the city\'s archaeological complex. Constructed during the 12th century, Galviharaya features four main statues carved into a granite rock face. The central statue is a standing Buddha, flanked by two seated statues and a reclining Buddha. The site also includes smaller caves, stupas, and structures. Galviharaya showcases exceptional craftsmanship and artistic beauty, attracting visitors who appreciate ancient Buddhist art and want to explore Anuradhapura\'s cultural heritage.</string>
    <string name="booking_deatails">Booking Deatails</string>
    <string name="discriptionPrakramabahu">The Statue of King Parakramabahu is a prominent monument in Polonnaruwa, Sri Lanka. It stands approximately 11 meters tall and represents King Parakramabahu the Great, a revered ruler of the 12th century. The statue showcases the king in a regal pose, wearing royal attire and holding a symbolic object. Carved out of a single rock, it highlights the exceptional sculptural skills of ancient Sri Lankan craftsmen. King Parakramabahu is remembered for his contributions to irrigation, agriculture, and Buddhism. The statue attracts visitors who appreciate history and offers insights into Sri Lanka\'s rich cultural heritage.</string>
    <string name="discriptionpalace">The Palace of King Parakramabahu in Polonnaruwa, Sri Lanka, was the grand royal residence and administrative center of King Parakramabahu the Great during the 12th century. Although now in ruins, the palace complex showcases the architectural brilliance of the time. It encompassed multiple buildings, courtyards, and elaborate stone carvings. The palace served as a symbol of power and governance, housing the king\'s audience halls and administrative offices. Despite its dilapidated state, the Palace of King Parakramabahu stands as a testament to the opulence and historical significance of ancient Sri Lankan royalty.</string>
    <string name="images_of_ancient_palace">Images of Ancient Palace</string>
    <string name="discriptionKirinda">Kirinda Viharaya is a historic Buddhist temple located near Kirinda in southern Sri Lanka. It holds religious and historical significance as the site where Princess Viharamaha Devi was saved from the sea by a crocodile. The temple features a prominent stupa, surrounded by intricately carved stone pillars and statues. Visitors come to Kirinda Viharaya to pay their respects, meditate, and enjoy the serene coastal location. The temple offers panoramic views of the ocean, creating a picturesque and spiritual atmosphere. Exploring Kirinda Viharaya allows individuals to connect with Sri Lanka\'s ancient Buddhist heritage and the fascinating legends associated with the temple.</string>
    <string name="discriptionYala">Yala National Park in Sri Lanka is a captivating wildlife sanctuary renowned for its biodiversity. It provides an opportunity to observe a range of animal species, including leopards, elephants, and a multitude of birds. With its picturesque scenery and cultural attractions, Yala National Park offers a memorable and immersive experience for those seeking to explore Sri Lanka\'s natural wonders.</string>
    <string name="images_of_yala_national_park">Images of Yala national Park</string>
    <string name="images_of_katharagama">Images of Katharagama</string>
</resources>