<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.YalaFragment">
    <Button
        android:id="@+id/favorite_icon"
        android:layout_width="35dp"
        android:layout_height="33dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="4dp"
        android:background="@drawable/ic_favorite_red_24dp"
        android:clickable="true"
        android:padding="16dp" />

    <TextView
        android:id="@+id/titleYala"
        android:layout_width="222dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="97dp"
        android:layout_marginTop="36dp"
        android:text="Yala National Park"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold" />

    <VideoView
        android:id="@+id/vedioYala"
        android:layout_width="400dp"
        android:layout_height="165dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="4dp"
        android:layout_marginTop="69dp"
        android:layout_marginEnd="7dp" />


    <ScrollView
        android:id="@+id/scrollViewYala"
        android:layout_width="398dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/vedioYala"
        android:layout_marginStart="5dp"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="6dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <com.google.android.gms.maps.MapView
                android:id="@+id/mapViewYala"
                android:layout_width="401dp"
                android:layout_height="170dp"
                android:layout_marginStart="6dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="6dp" />

            <TextView
                android:id="@+id/discriptionYala"
                android:layout_width="398dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="1dp"
                android:layout_marginBottom="5dp"
                android:text="@string/discriptionYala"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/images_of_yala_national_park"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textSize="20sp"
                />



            <ImageView
                android:id="@+id/YalaImage1"
                android:layout_width="400dp"
                android:layout_height="250dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginTop="0dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/yala1" />
            <ImageView
                android:id="@+id/YalaImage2"
                android:layout_width="400dp"
                android:layout_height="250dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginTop="0dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/yala2" />
            <ImageView
                android:id="@+id/YalaImage3"
                android:layout_width="400dp"
                android:layout_height="250dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginTop="0dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/yala3" />

            <ImageView
                android:id="@+id/YalaImage4"
                android:layout_width="400dp"
                android:layout_height="250dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="5dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/yala4" />

            <Button
                android:id="@+id/btnMoreDetilsYala"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="0dp"
                android:text="Click more Details" />
            <Button
                android:id="@+id/btnBookingDetilsYala"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_centerHorizontal="true"
                android:layout_marginBottom="50dp"
                android:text="Booking Deatails" />


        </LinearLayout>
    </ScrollView>

</RelativeLayout>