<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.KatharagamaFragment">
    <Button
        android:id="@+id/favorite_icon"
        android:layout_width="35dp"
        android:layout_height="33dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="4dp"
        android:background="@drawable/ic_favorite_red_24dp"
        android:clickable="true"
        android:padding="16dp" />
    <TextView
        android:id="@+id/titleKatharagama"
        android:layout_width="222dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="97dp"
        android:layout_marginTop="36dp"
        android:text="Katharagama Viharaya"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold" />

    <VideoView
        android:id="@+id/vedioKatharagama"
        android:layout_width="400dp"
        android:layout_height="165dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="4dp"
        android:layout_marginTop="69dp"
        android:layout_marginEnd="7dp" />


    <ScrollView
        android:id="@+id/scrollViewKatharagama"
        android:layout_width="398dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/vedioKatharagama"
        android:layout_marginStart="5dp"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="6dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <com.google.android.gms.maps.MapView
                android:id="@+id/mapViewKatharagama"
                android:layout_width="401dp"
                android:layout_height="170dp"
                android:layout_marginStart="6dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="6dp" />

            <TextView
                android:id="@+id/discriptionKatharagama"
                android:layout_width="398dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="1dp"
                android:layout_marginBottom="5dp"
                android:text="@string/discriptionSrimahabodiya"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/images_of_katharagama"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textSize="20sp"
                />



            <ImageView
                android:id="@+id/KatharagamaImage1"
                android:layout_width="400dp"
                android:layout_height="250dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginTop="0dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/kathragma" />
            <ImageView
                android:id="@+id/KatharagamaImage2"
                android:layout_width="400dp"
                android:layout_height="250dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginTop="0dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/katharagama2" />
            <ImageView
                android:id="@+id/KatharagamaImage3"
                android:layout_width="400dp"
                android:layout_height="250dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginTop="0dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/katharagama3" />

            <ImageView
                android:id="@+id/SrimahabodiyaImage4"
                android:layout_width="400dp"
                android:layout_height="250dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="5dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/katharagama4" />

            <Button
                android:id="@+id/btnMoreDetilsKatharagama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="0dp"
                android:text="Click more Details" />
            <Button
                android:id="@+id/btnBookingDetilsKatharagama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="50dp"
                android:text="Booking Deatails" />


        </LinearLayout>
    </ScrollView>

</RelativeLayout>