<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.GalviharayaFragment">

    <Button
        android:id="@+id/favorite_icon"
        android:layout_width="35dp"
        android:layout_height="33dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="4dp"
        android:background="@drawable/ic_favorite_red_24dp"
        android:clickable="true"
        android:padding="16dp" />

    <TextView
        android:textColor="@color/textboxColor"
        android:id="@+id/titleGalviharaya"
        android:layout_width="222dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="97dp"
        android:layout_marginTop="36dp"
        android:text="Galviaraya"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold" />

    <VideoView
        android:id="@+id/vedioGalviaraya"
        android:layout_width="400dp"
        android:layout_height="165dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="4dp"
        android:layout_marginTop="69dp"
        android:layout_marginEnd="7dp" />


    <ScrollView
        android:id="@+id/scrollViewGalviaraya"
        android:layout_width="398dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/vedioGalviaraya"
        android:layout_marginStart="5dp"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="6dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <com.google.android.gms.maps.MapView
                android:id="@+id/mapViewGalviaraya"
                android:layout_width="401dp"
                android:layout_height="170dp"
                android:layout_marginStart="6dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="6dp" />

            <TextView
                android:textColor="@color/textboxColor"
                android:id="@+id/discriptionGalviaraya"
                android:layout_width="398dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="1dp"
                android:layout_marginBottom="5dp"
                android:text="@string/discriptionGalviharaya"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Images of Galviharaya "
                android:textAlignment="center"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="@color/textboxColor"
                />



            <ImageView
                android:id="@+id/GalviharayaImage1"
                android:layout_width="400dp"
                android:layout_height="250dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginTop="0dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/galviharaya4" />
            <ImageView
                android:id="@+id/GalviharayaImage2"
                android:layout_width="400dp"
                android:layout_height="250dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginTop="0dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/galviharaya1" />
            <ImageView
                android:id="@+id/GalviharayaImage3"
                android:layout_width="400dp"
                android:layout_height="250dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginTop="0dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/galviharaya2" />

            <ImageView
                android:id="@+id/GalviharayaImage4"
                android:layout_width="400dp"
                android:layout_height="250dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="5dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/galviharaya3" />

            <Button
                android:id="@+id/btnMoreDetilsGalviharaya"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="0dp"
                android:text="Click more Details" />
            <Button
                android:id="@+id/btnBookingDetilsGalviharaya"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_centerHorizontal="true"
                android:layout_marginBottom="50dp"
                android:text="@string/booking_deatails" />


        </LinearLayout>
    </ScrollView>

</RelativeLayout>